fix(core/tooltip): styles bleeding in (#1444)

--- a/packages/core/src/components/tooltip/tooltip.scss
+++ b/packages/core/src/components/tooltip/tooltip.scss
@@ -12,10 +12,6 @@
   overflow-wrap: break-word;
 
   border-radius: 0.25rem;
-  background-color: var(--theme-tootlip--background);
-  padding: 0.375rem 0.75rem 0.375rem 0.875rem;
-
-  box-shadow: var(--theme-shadow-4);
 
   .tooltip-title {
     display: flex;
@@ -24,6 +20,19 @@
     ::slotted(ix-icon) {
       margin-right: 0.35rem;
     }
+  }
+
+  .tooltip-container {
+    display: block;
+    position: relative;
+    width: auto;
+    height: 100%;
+    background: var(--theme-tootlip--background);
+    color: var(--theme-color-std-text);
+    padding: 0.375rem 0.75rem 0.375rem 0.875rem;
+
+    box-shadow: var(--theme-shadow-4);
+
   }
 }
 
